--- a/src/components/layout/Content.css
+++ b/src/components/layout/Content.css
@@ -1,12 +1,13 @@
 .Content {
     display: flex;
-    flex-grow: 1;
+    flex: 1;
+    width: 100%;
     background-color: #ececec;
     padding: 30px;
+    min-height: 100vh; 
 }
 
 .Content > * {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
+    display: block;
+    width: 100%
 }
